demo/deployment-pre-built.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: basic-auth-plugin
  namespace: basic-auth-plugin
  labels:
    app: basic-auth-plugin

spec:
  selector:
    matchLabels:
      app: basic-auth-plugin

  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: basic-auth-plugin

    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: envoy
          image: ghcr.io/antonengelhardt/basic-auth-plugin:latest

          resources:
            requests:
              cpu: 300m
              memory: 300Mi
            limits:
              cpu: 300m
              memory: 300Mi

          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy/envoy.yaml
              subPath: envoy.yaml

          startupProbe:
            httpGet:
              path: /healthcheck
              port: 10000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 10000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5

          ports:
            - containerPort: 10000
              name: http
              protocol: TCP

          command:
            ["envoy", "-c", "/etc/envoy/envoy.yaml", "--concurrency", "5"]

      volumes:
        - name: envoy-config
          configMap:
            name: basic-auth-plugin-config
            defaultMode: 420
            items:
              - key: envoy.yaml
                path: envoy.yaml

      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: basic-auth-plugin

spec:
  selector:
    matchLabels:
      app: httpbin

  template:
    metadata:
      labels:
        app: httpbin

    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 80
