demo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-auth-plugin-ingress
  namespace: basic-auth-plugin
spec:
  ingressClassName: nginx
  rules:
    - host: basic-auth-plugin.ae02.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: basic-auth-plugin-service
                port:
                  number: 443
  tls:
    - hosts:
        - basic-auth-plugin.ae02.de
      secretName: basic-auth-plugin-tls
